@@ -18,6 +18,8 @@ git-annex (3.20120124) UNRELEASED; urgency=low
   * Fix teardown of stale cached ssh connections.
   * When checking that an url has a key, verify that the Content-Length,
     if available, matches the size of the key.
+  * addurl --fast: Verifies that the url can be downloaded (only getting
+    its head), and records the size in the key.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 24 Jan 2012 16:21:55 -0400
 
